# Modeling

./: CMakeLists.txt
include/: rng.hpp
include/generators/: icg.hpp  lcg.hpp  lfg.hpp  mcg.hpp  mrg.hpp  msm.hpp
include/menu/: menu_handler.hpp
include/tests/: randomness_tests.hpp
src/: main.cpp
src/generators/: icg.cpp  lcg.cpp  lfg.cpp  mcg.cpp  mrg.cpp  msm.cpp
src/menu/: menu_handler.cpp
src/tests/: randomness_tests.cpp
